Fixing flags not showing correctly for brackets and in flat theme

--- a/app/assets/stylesheets/themes/default/components/_flags.scss
+++ b/app/assets/stylesheets/themes/default/components/_flags.scss
@@ -1,4 +1,4 @@
-.flag {
+img.flag {
   width: 16px;
   height: 11px;
   background: image_url('shared/flags.png') no-repeat;
